fix sign-in modal z-index

--- a/src/pages/templates/MainPageTemplate.scss
+++ b/src/pages/templates/MainPageTemplate.scss
@@ -7,6 +7,7 @@
         padding: 7px 20px;
         position: fixed;
         top: 0;
+        z-index: 1;
 
         display: flex;
         justify-content: space-between;
